Update github url config

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   sbrus1213
 email:              rlgus1590@gmail.com
 #twitter:           username
 #facebook:          username
-github-url:         https://github.com/sbrus1213
+github-url:         sbrus1213
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
