--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "sbrus1213 blog"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/welcome.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             ko_KR
 url:                https://sbrus1213.github.io
