--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   sbrus1213
+disqus_shortname:   sbrus1213-github-io
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -42,7 +42,7 @@ email:              rlgus1590@gmail.com
 #facebook:          username
 github-url:         sbrus1213
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           sbrus1213
 #xing:              username
 #instagram:         username
 #lastfm:            username
@@ -61,6 +61,7 @@ github-url:         sbrus1213
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
+#boj:                sbrus_1213
 
 # Gems
 gems:
